Fix the Header Layout on Mobile view

--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -262,12 +262,14 @@ button {
 
     .lhn-header {
         padding: 24px;
+        display: flex;
+        justify-content: space-between;
+
         @include breakpoint($breakpoint-tablet) {
             padding: 44px;
         }
 
         #header-button {
-            position: absolute;
             display: block;
             @include breakpoint($breakpoint-tablet) {
                 display: none;
