--- a/docs/_sass/_search-bar.scss
+++ b/docs/_sass/_search-bar.scss
@@ -101,6 +101,10 @@ input#gsc-i-id1.gsc-input {
     padding: 5px 9px 4px 0px;
 }
 
+.search-icon-wrapper {
+    margin: auto 0;
+}
+
 .search-icon {
     margin-left: auto;
 }
